--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <!-- Simple Page Needs
 ================================================== -->
-<title>SAÚL FALCÓN GUZMÁN - Currículum</title>
+<title>Currículum Saúl Falcón Guzmán</title>
 <meta charset="UTF-8">
-<meta name="description" content="Mat - Resume & vCard HTML Template">
-<meta name="keywords" content="personal, vcard, portfolio">
+<meta name="description" content="Currículum Profesional de Saúl Falcón Guzmán - Licenciado en Psicología con experiencia en gestión pública, seguridad ciudadana y movilidad urbana. Director General con especialización en desarrollo organizacional y recursos humanos.">
+<meta name="keywords" content="Saúl Falcón Guzmán, currículum, CV, director general, seguridad ciudadana, movilidad urbana, Naucalpan, psicología, recursos humanos, gestión pública">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 <!-- Favicon
