--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
 <meta name="description" content="Currículum Profesional de Saúl Falcón Guzmán - Licenciado en Psicología con experiencia en gestión pública, seguridad ciudadana y movilidad urbana. Director General con especialización en desarrollo organizacional y recursos humanos.">
 <meta name="keywords" content="Saúl Falcón Guzmán, currículum, CV, director general, seguridad ciudadana, movilidad urbana, Naucalpan, psicología, recursos humanos, gestión pública">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+<!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Currículum Saúl Falcón Guzmán">
+<meta property="og:description" content="Currículum Profesional de Saúl Falcón Guzmán - Director General en Seguridad Ciudadana y Movilidad Urbana">
+<meta property="og:image" content="./saulcv.png">
+<meta property="og:type" content="profile">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Currículum Saúl Falcón Guzmán">
+<meta name="twitter:description" content="Currículum Profesional - Director General en Seguridad Ciudadana">
+<meta name="twitter:image" content="./saulcv.png">
+
 <!-- Favicon
 ================================================== -->  
-<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+<link href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23003d99'/><rect x='15' y='15' width='70' height='70' fill='%23ffffff' rx='5'/><rect x='25' y='25' width='50' height='8' fill='%23003d99'/><rect x='25' y='38' width='50' height='3' fill='%23cccccc'/><rect x='25' y='44' width='50' height='3' fill='%23cccccc'/><rect x='25' y='50' width='50' height='3' fill='%23cccccc'/><rect x='25' y='56' width='30' height='3' fill='%23cccccc'/></svg>" rel="shortcut icon" type="image/svg+xml" />
 
 <!-- CSS
 ================================================== -->
@@ -198,7 +207,7 @@ footer .name {
             <span class="job">Licenciatura en Psicología</span>
         </div>
         <figure class="profile-image">
-            <img src="./saulcv.png" alt="">
+            <img src="./saulcv.png" alt="SAÚL FALCÓN GUZMÁN">
         </figure> 
         <ul class="profile-information">
             <li></li>
